--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 @font-face {
-  font-family: "Kyobo";
-  src: url("./assets/fonts/KyoboHandwriting2019.ttf")
+    font-family: 'LeeSeoyun';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .App {
